# knowledgecore

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.bench/: baseline-v1.json
.github/: dependabot.yml
.github/workflows/: ci.yml  security-audit-incident.yml  security-audit.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  rpc.rs
apps/desktop/src-tauri/tests/: rpc.rs  rpc_schema.rs
crates/kc_ask/: Cargo.toml
crates/kc_cli/: Cargo.toml
crates/kc_cli/src/: cli.rs  main.rs  verifier.rs
crates/kc_cli/src/commands/: bench.rs  deps.rs  export.rs  fixtures.rs  gc.rs  index.rs  ingest.rs  lineage.rs  preview.rs  sync.rs  trust.rs  vault.rs  verify.rs
crates/kc_cli/tests/: preview_scaffold.rs  recovery.rs  schema_verifier_report.rs  smoke.rs  sync.rs  trust.rs  verifier.rs
crates/kc_core/: Cargo.toml
crates/kc_core/benches/: core_bench.rs
crates/kc_core/migrations/: 0001_init.sql  0002_sync.sql  0003_lineage_overlays.sql  0004_device_trust.sql  0005_lineage_edit_locks.sql  0006_trust_identity_v2.sql  0007_recovery_escrow_v2.sql  0008_lineage_rbac_v2.sql  0009_trust_provider_governance.sql  0010_recovery_escrow_providers_v3.sql  0011_lineage_policy_conditions_v3.sql
crates/kc_core/src/: app_error.rs  canon_json.rs  canonical.rs  chunking.rs  db.rs  events.rs  export.rs  hashing.rs  index_traits.rs  ingest.rs  lib.rs  lineage.rs  lineage_governance.rs  lineage_policy.rs  locator.rs  object_store.rs  recovery.rs  recovery_escrow.rs  recovery_escrow_aws.rs  recovery_escrow_azure.rs  recovery_escrow_gcp.rs  recovery_escrow_hsm.rs  recovery_escrow_local.rs  recovery_escrow_private_kms.rs  retrieval.rs  rpc_service.rs  services.rs  snippet.rs  sync.rs  sync_merge.rs  sync_s3.rs  sync_transport.rs  trust.rs  trust_identity.rs  trust_policy.rs  types.rs  vault.rs
crates/kc_core/src/deferred/: encryption.rs  lineage.rs  mod.rs  sync.rs  zip_packaging.rs
crates/kc_core/tests/: canonical_json.rs  canonical_json_vectors.json  canonical_persist.rs  chunking_golden.rs  db_encryption.rs  events.rs  export_manifest.rs  hashing.rs  ingest.rs  lineage.rs  lineage_governance.rs  lineage_lock.rs  lineage_policy.rs  locator.rs  migrations.rs  object_store.rs  recovery.rs  recovery_escrow.rs  retrieval_ordering.rs  schema_app_error.rs  schema_draft_encryption.rs  schema_draft_lineage.rs  schema_draft_sync.rs  schema_draft_zip_packaging.rs  schema_export_manifest.rs  schema_lineage.rs  schema_lineage_governance.rs  schema_lineage_lock.rs  schema_recovery_manifest.rs  schema_sync_manifest.rs  schema_sync_merge.rs  schema_sync_target.rs  schema_trust.rs  schema_trust_identity.rs  schema_vault_json.rs  smoke.rs  sync.rs  sync_merge.rs  trust.rs  trust_identity.rs  (+1 more)
crates/kc_extract/: Cargo.toml
crates/kc_index/: Cargo.toml
crates/kc_index/benches/: index_bench.rs
crates/kc_index/src/: embedding.rs  fts.rs  indexer.rs  lib.rs  vector.rs
crates/kc_index/tests/: fts.rs  smoke.rs  vector.rs
knowledgecore-docpack/: AGENTS.md  CHECKLIST_VERIFICATION.md  RUNBOOK_CODEX.md  SCHEMA_REGISTRY.md
knowledgecore-docpack/docs/: 00-overview.md  01-module-boundaries.md  02-determinism-tiers-and-version-boundaries.md  03-phase-d-k-closure-report.md  04-post-dk-ops-and-followup-policy.md  05-next-stretch-plan.md  06-next-stretch-readiness-note.md  07-phase-l-execution-notes.md  08-ga-closeout-control-log.md  09-ga-validation-evidence.md  10-ga-artifact-manifest-v0.1.0.md  11-ga-release-notes-v0.1.0.md  12-ga-go-no-go-checklist.md  13-ga-rollback-and-hypercare.md  (+4 more)
plan/: 00-milestones-and-gates.md  01-step-by-step-implementation-plan.md  02-codex-mega-prompt.md
scripts/: audit-rust.mjs  clean-local.sh  dependency-watch.mjs  run-dev-lean.sh  size-audit.sh
security/: DEPENDENCY_MIGRATION.md  dependency-watch.json  rustsec-policy.json
(+98 files in other folders)
