[package]
name = "kc_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
phase_l_preview = ["kc_core/phase_l_preview"]

[dependencies]
clap.workspace = true
kc_ask = { path = "../kc_ask" }
kc_core = { path = "../kc_core" }
kc_extract = { path = "../kc_extract" }
kc_index = { path = "../kc_index" }
jsonschema = "0.18"
serde.workspace = true
serde_json.workspace = true
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.23"
