[package]
name = "kc_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
regex = "1.12"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion = "0.7"
jsonschema = "0.18"
tempfile = "3.23"

[[bench]]
name = "core_bench"
harness = false
