[package]
name = "kc_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
phase_l_preview = []

[dependencies]
argon2 = "0.5"
blake3.workspace = true
chacha20poly1305 = "0.10"
regex = "1.12"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = "0.7"
jsonschema = "0.18"
tempfile = "3.23"

[[bench]]
name = "core_bench"
harness = false
