[package]
name = "kc_index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kc_core = { path = "../kc_core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = "0.7"
tempfile = "3.23"

[[bench]]
name = "index_bench"
harness = false
