[package]
name = "apps_desktop_tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kc_ask = { path = "../../../crates/kc_ask" }
kc_cli = { path = "../../../crates/kc_cli" }
kc_core = { path = "../../../crates/kc_core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.10.2", features = [] }

[dev-dependencies]
tempfile = "3.23"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
